--- a/Set/Rcr.html
+++ b/Set/Rcr.html
@@ -148,7 +148,7 @@
     
 <div  class="D1" > 
     
-     <b> <a href="St2.html" class="Txt1"  > <-- Ana Menü</a></b>  
+     <b> <a href="Start.html" class="Txt1"  > <-- Ana Menü</a></b>  
      <b> <a class="Txt2">Raid Masraf</a onclick="changeText5()" > </b>
      <hr>
 
