--- a/Set/Main.html
+++ b/Set/Main.html
@@ -8,7 +8,7 @@
 
 </head>
 <body bgcolor="424949"  > 
-   <b><a href="St2.html" class="nx">   <-- Geri  </a></b>       <b><A onclick="changeText01()" class="bst" >Hızlı Üretimler</A></b>
+   <b><a href="Start.html" class="nx">   <-- Geri  </a></b>       <b><A onclick="changeText01()" class="bst" >Hızlı Üretimler</A></b>
   <hr>
   <div id="War"> 
   <a class="Wart" > <b>Patlayıcı Tarifleri  Sadece Kendi Başına Gelen Toplam Masrafı Belirtir.  <br>
