--- a/Set/Bpr.html
+++ b/Set/Bpr.html
@@ -10,7 +10,7 @@
 <body bgcolor="424949" >
 
 <div class="Div0" >
-    <b><a class="Text3" href="St2.html" > <<-- Geri </a></b>
+    <b><a class="Text3" href="Start.html" > <<-- Geri </a></b>
     <b><a class="Text4" href="Main.html" > Üretim</a></b>
     <b><a class="Text3" href="Rcr.html" > Raid Masraf</a></b>
     <hr>
