--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 		var userAgent = navigator.userAgent.toLowerCase(); // Cihazın user agent bilgisini al
 		var isMobile = /iphone|ipod|ipad|android|blackberry|windows phone/.test(userAgent); // Cihazın mobil olup olmadığını kontrol et
 		if (isMobile) {
-			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Tel/sorry.html; // Cihaz mobil ise farklı bir siteye yönlendir
+			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Tel/sorry.html"; // Cihaz mobil ise farklı bir siteye yönlendir
 		} else {
-			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Start.html"; // Cihaz masaüstü ise farklı bir siteye yönlendir
+			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Start.html";
+			// Cihaz masaüstü ise farklı bir siteye yönlendir
 		}
 	</script>
 </body>
