--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" href="https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/imgs/Madde.png">
 	<title>Yönlendirme</title>
+	<link rel="icon" href="https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/imgs/barut.png" >
 </head>
 <body>
 	<script>
@@ -11,8 +11,7 @@
 		if (isMobile) {
 			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Tel/sorry.html"; // Cihaz mobil ise farklı bir siteye yönlendir
 		} else {
-			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Start.html";
-			// Cihaz masaüstü ise farklı bir siteye yönlendir
+			window.location.href = "https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/Start.html"; // Cihaz masaüstü ise farklı bir siteye yönlendir
 		}
 	</script>
 </body>
