--- a/Set/Tel/sorry.html
+++ b/Set/Tel/sorry.html
@@ -1,2 +1,16 @@
-TELEFON VERSİYONU ŞUANLIK DESTEKLENMİYOR....
-Siteye Erişmek için Bilgisayardan Giriniz...
+<html>
+<head>
+    <title>Ana Menü</title>
+    <link rel="icon" href="https://rrewqq.github.io/K.N.G-Rust-Yardimci-Uygulama/Set/imgs/ak.png" >
+    <link rel="stylesheet" href="Mains/Settings1.css" />
+    <script href="Mains/Ja/Settings1.js" ></script>
+</head>
+<body  >
+
+
+    <div  class="MDiv" >
+
+    </div>
+    
+</body>
+</html>
